--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "next": "12.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-persist": "^1.0.2",
     "react-redux": "^8.0.2",
+    "redux": "^4.2.0",
+    "redux-persist": "^6.0.0",
     "swiper": "^8.3.2"
   },
   "devDependencies": {
